--- a/chrome/toolbar/tabbar.css
+++ b/chrome/toolbar/tabbar.css
@@ -408,13 +408,13 @@ toolbarbutton[part="scrollbutton-down"] {
   --uc-tab-shadow:
     0 0 0 1px var(--lwt-tab-line-color, var(--lwt-tabs-border-color, transparent)),
     0px 2px 4px rgb(0 0 0 / .2), 0 4px 8px rgb(0 0 0 / .1);
-}
 
-:root[lwtheme-brighttext="true"] {
-  --uc-titlebar-shadow: 0 -3px 2px -3px rgb(0 0 0 / .75) inset inset;
-  --uc-tab-shadow:
-    0 0 0 1px var(--lwt-tab-line-color, var(--lwt-tabs-border-color, transparent)),
-    0 2px 4px rgb(0 0 0 / .45), 0 0px 2px rgb(0 0 0 / .2);
+  & [brighttext] {
+    --uc-titlebar-shadow: 0 -3px 2px -3px rgb(0 0 0 / .75) inset;
+    --uc-tab-shadow:
+      0 0 0 1px var(--lwt-tab-line-color, var(--lwt-tabs-border-color, transparent)),
+      0 2px 4px rgb(0 0 0 / .45), 0 0px 2px rgb(0 0 0 / .2);
+  }
 }
 
 #tabbrowser-tabs .tab-background:is([selected], [multiselected]),
@@ -422,7 +422,7 @@ toolbarbutton[part="scrollbutton-down"] {
   box-shadow: var(--uc-tab-shadow) !important;
 }
 
-#titlebar {
+#TabsToolbar {
   box-shadow: var(--uc-titlebar-shadow) !important;
 }
 
